--- a/init.html
+++ b/init.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../styles/login.css">
+    <link rel="stylesheet" type="text/css" href="/styles/login.css">
 </head>
 <body>
     <h1 class="progress-text">
